--- a/assets/html/ai_studio_code.html
+++ b/assets/html/ai_studio_code.html
@@ -390,7 +390,7 @@
         <section class="section-content">
             <h2>But... Is It Necessary?</h2>
             <p>Let's compare Gradient Descent on the original vs. the regularized problem. (Fig 1a from Du et al. 2018)</p>
-            <img src="C:/Users/Rathindra/Documents/Menon/Matrix_Exp1.png" alt="Convergence plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
+            <img src="/assets/html/Matrix_Exp1.png" alt="Convergence plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
             <p style="text-align:center;">The convergence rates are competitive. The original, unregularized problem converges just fine.</p>
         </section>
 
@@ -398,7 +398,7 @@
         <section class="section-content">
             <h2>The Empirical Surprise</h2>
             <p style="text-align:center;">What happens to the norms of the factors during training? (Fig 1b from Du et al. 2018)</p>
-            <img src="C:/Users/Rathindra/Documents/Menon/Matrix_Exp2.png" alt="Norm ratio plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
+            <img src="/assets/html/Matrix_Exp2.png" alt="Norm ratio plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
             <p style="text-align:center;">The ratio of the norms remains constant, even for the unregularized objective. The layers stay balanced on their own!</p>
         </section>
 
@@ -406,7 +406,7 @@
         <section class="section-content">
             <h2>The Empirical Surprise</h2>
             <p style="text-align:center;">Similar observation for the Deep Linear Networks (DLN) (Fig 2 from Du et al. 2018)</p>
-            <img src="C:/Users/Rathindra/Documents/Menon/DLN_Exp1.png" alt="Norm ratio plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
+            <img src="/assets/html/DLN_Exp1.png" alt="Norm ratio plot" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
             <p style="text-align:center;">The ratio of the norms remains constant, even for the unregularized objective. The layers stay balanced on their own!</p>
         </section>        
         
