--- a/assets/html/ai_studio_code (2).html
+++ b/assets/html/ai_studio_code (2).html
@@ -230,13 +230,13 @@
     <h2>But... Is It Necessary? The Empirical Surprise</h2>
     <p>Let's compare Gradient Descent on the original vs. the regularized problem for matrix factorization. (Fig 1 from Du et al. 2018)</p>
     <div style="text-align:center;">
-        <img src="C:/Users/Rathindra/Documents/Menon/Matrix_Exp1.png" alt="Convergence plot" style="width: 50%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
-        <img src="C:/Users/Rathindra/Documents/Menon/Matrix_Exp2.png" alt="Norm ratio plot" style="width: 50%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
+        <img src="/assets/images/Matrix_Exp1.png" alt="Convergence plot" style="width: 50%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
+        <img src="/assets/images/Matrix_Exp2.png" alt="Norm ratio plot" style="width: 50%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
     </div>
     <p>The unregularized problem converges just as well, and surprisingly, the ratio of the factor norms remains constant. The layers stay balanced on their own!</p>
     <p>A similar observation holds for Deep Linear Networks (DLN). (Fig 2 from Du et al. 2018)</p>
     <div style="text-align:center;">
-        <img src="C:/Users/Rathindra/Documents/Menon/DLN_Exp1.png" alt="Norm ratio plot for DLN" style="width: 60%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
+        <img src="/assets/images/DLN_Exp1.png" alt="Norm ratio plot for DLN" style="width: 60%; border: 1px solid #ccc; border-radius: 8px; margin-bottom: 1em;">
     </div>
 
     <h2 style="text-align:center; border-bottom: none;">The Central Question</h2>
