--- a/assets/html/S2.html
+++ b/assets/html/S2.html
@@ -278,8 +278,8 @@
             <h2>Empirical Evidence: Acceleration with Depth</h2>
             <p>Comparison of gradient descent on a linear regression task with $\ell_p$ loss. (Fig 3 from Arora et al. 2018)</p>
             <div style="display: flex; justify-content: center; gap: 30px; width:100%;">
-                <img src="C:/Users/Rathindra/Documents/Menon/L2.png" alt="L2 loss convergence" style="width: 36%; border: 1px solid #ccc; border-radius: 8px;">
-                <img src="C:/Users/Rathindra/Documents/Menon/L4.png" alt="L4 loss convergence" style="width: 36%; border: 1px solid #ccc; border-radius: 8px;">
+                <img src="/workspaces/rnkarmakar.github.io/assets/images/L2.png" alt="L2 loss convergence" style="width: 36%; border: 1px solid #ccc; border-radius: 8px;">
+                <img src="/workspaces/rnkarmakar.github.io/assets/images/L4.png" alt="L4 loss convergence" style="width: 36%; border: 1px solid #ccc; border-radius: 8px;">
             </div>
             <ul>
                 <li><strong>Left ($\ell_2$ loss):</strong> Increasing depth slightly *slows down* convergence, consistent with prior work.</li>
