--- a/assets/pdf/S3-pdf.html
+++ b/assets/pdf/S3-pdf.html
@@ -169,7 +169,7 @@
     <h3>Experimental Verification for Hypothesis 1</h3>
     <p>The theory predicts that as the loss decreases, the unobserved entry ($w_{11}$) should grow. The experiments (Fig 1 from Razin & Cohen, 2020) confirm this: as loss decreases (moving right to left on the x-axis), the absolute value of the unobserved entry increases. Since all norms must grow with this entry, this validates the theorem and refutes the norm minimization hypothesis.</p>
     <div style="text-align:center; margin: 25px 0;">
-        <img src="C:/Users/Rathindra/Documents/Menon/quasinorm.png" alt="Plot showing unobserved entry growing as loss decreases" style="width: 80%; max-width: 600px; border: 1px solid #ccc; border-radius: 8px;">
+        <img src="/workspaces/rnkarmakar.github.io/assets/images/quasinorm.png" alt="Plot showing unobserved entry growing as loss decreases" style="width: 80%; max-width: 600px; border: 1px solid #ccc; border-radius: 8px;">
     </div>
 
     <h2>Hypothesis 2: Rank Minimization</h2>
@@ -182,7 +182,7 @@
     <h3>Experiment: Is Rank/Effective Rank Sufficient?</h3>
     <p>Consider a 2x2 diagonal matrix completion task where all rank-1 solutions lie on a hyperbola. The training outcomes (Fig 4 from Cohen, Menon, Veraszto, 2023) cluster tightly around the corners of the hyperbola, indicating a strong preference for these solutions.</p>
     <div style="text-align:center; margin: 25px 0;">
-        <img src="C:/Users/Rathindra/Documents/Menon/hyperbola.png" alt="Training outcomes on a hyperbola of rank-1 solutions" style="width: 90%; max-width: 700px; border: 1px solid #ccc; border-radius: 8px;">
+        <img src="/workspaces/rnkarmakar.github.io/assets/images/hyperbola.png" alt="Training outcomes on a hyperbola of rank-1 solutions" style="width: 90%; max-width: 700px; border: 1px solid #ccc; border-radius: 8px;">
     </div>
     <ul>
         <li>All points on the red/green curves are rank-1 minimizers. A simple **rank minimization** principle fails to explain the clustering.</li>
@@ -190,7 +190,7 @@
     </ul>
     <p>In another experiment with a 3x3 diagonal matrix completion task, the majority of 500 outputs cluster near one particular rank-two minimizer out of many possibilities.</p>
      <div style="text-align:center; margin: 25px 0;">
-        <img src="C:/Users/Rathindra/Documents/Menon/rankExp2.png" alt="Training outcomes are rank-2 solutions" style="width: 90%; max-width: 700px; border: 1px solid #ccc; border-radius: 8px;">
+        <img src="/workspaces/rnkarmakar.github.io/assets/images/rankExp2.png" alt="Training outcomes are rank-2 solutions" style="width: 90%; max-width: 700px; border: 1px solid #ccc; border-radius: 8px;">
     </div>
 
     <h2>Hypothesis 3: Bias Towards High State Space Volume</h2>
@@ -202,7 +202,7 @@
     <h3>Volume as the Predictor</h3>
     <p>Plotting the logarithm of the state space volume on the same plane of solutions (Fig 5 from Cohen, Menon, Veraszto, 2023), we see the volume (brighter colors) is highest precisely at the corners of the hyperbola where the training outcomes clustered. This suggests that the dynamics are not just minimizing rank, but are being attracted to the regions of maximal volume within the set of low-rank solutions.</p>
     <div style="text-align:center; margin: 25px 0;">
-        <img src="C:/Users/Rathindra/Documents/Menon/volume.png" alt="Heatmap of volume on the solution space" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
+        <img src="/workspaces/rnkarmakar.github.io/assets/images/volume.png" alt="Heatmap of volume on the solution space" style="width: 60%; max-width: 500px; border: 1px solid #ccc; border-radius: 8px;">
     </div>
     
     <h2>Quantifying Volume on the Solution Space</h2>
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div class="column-text" style="display:flex; align-items:center; justify-content:center; text-align:center;">
-             <img src="C:/Users/Rathindra/Documents/Menon/submersion.png" alt="Diagram of Riemannian submersion" style="width: 80%; max-width: 350px; border: 1px solid #ccc; border-radius: 8px;">
+             <img src="/workspaces/rnkarmakar.github.io/assets/images/submersion.png" alt="Diagram of Riemannian submersion" style="width: 80%; max-width: 350px; border: 1px solid #ccc; border-radius: 8px;">
         </div>
     </div>
     
