--- a/assets/pdf/S2-pdf.html
+++ b/assets/pdf/S2-pdf.html
@@ -126,11 +126,11 @@
     <div class="image-placeholder-container">
         <div class="image-placeholder">
             <h4>L2 Loss Convergence</h4>
-            <p>(Image showing training loss vs. iteration. Curves for depth 1, 2, 4, 8 show that deeper networks converge slightly slower than the shallow network.)</p>
+            <img src="/assets/images/L2.png" alt="Image showing training loss vs. iteration. Curves for depth 1, 2, 4, 8 show that deeper networks converge slightly slower than the shallow network." style="width: 80%; max-width: 600px; border: 1px solid #ccc; border-radius: 8px;">
         </div>
         <div class="image-placeholder">
             <h4>L4 Loss Convergence</h4>
-            <p>(Image showing training loss vs. iteration. Curves for depth 1, 2, 4, 8 show that deeper networks converge dramatically faster than the shallow network.)</p>
+            <img src="/assets/images/L4.png" alt="Image showing training loss vs. iteration. Curves for depth 1, 2, 4, 8 show that deeper networks converge dramatically faster than the shallow network." style="width: 80%; max-width: 600px; border: 1px solid #ccc; border-radius: 8px;">
         </div>
     </div>
     <ul>
